--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -235,7 +235,7 @@ jobs:
     - name: "Download the library artifacts from build-library step"
       uses: actions/download-artifact@v4
       with:
-        pattern: "*-${{ matrix.python-version }}"
+        pattern: "v[0-9][0-9][0-9]-${{ matrix.python-version }}"
         path: ${{ env.PACKAGE_PATH }}/
 
     - name: Create __init__.py in ${{ env.PACKAGE_PATH }}
@@ -327,7 +327,7 @@ jobs:
     - name: Download the library artifacts
       uses: actions/download-artifact@v4
       with:
-        pattern: "*-${{ env.MAIN_PYTHON_VERSION }}"
+        pattern: "v[0-9][0-9][0-9]-${{ env.MAIN_PYTHON_VERSION }}"
         path: ${{ env.PACKAGE_PATH }}/
 
     - name: Display structure of downloaded files
