--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -138,7 +138,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Download stubs
-      uses: setup-version-dirs
+      uses: pymechanical-stubs/setup-version-dirs
       with:
         folder-pattern: "*-${{ matrix.python-version }}"
         package-path: "${{ env.PACKAGE_PATH }}"
