--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -138,7 +138,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Download stubs
-      uses: ./.github/setup-version-dirs/action
+      uses: ./.github/setup-stubs/
       with:
         folder-pattern: "*-${{ matrix.python-version }}"
         package-path: "${{ env.PACKAGE_PATH }}"
@@ -195,6 +195,9 @@ jobs:
     #         for folder in subfolders:
     #             f.write(f"from .{folder} import *\n")
     #             f.write('"""Mechanical installation version."""\n')
+  
+    - name: List files
+      run: ls -R
 
     - name: Retrieve Mechanical version
       run: |
