--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -61,10 +61,9 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         mechanical: [
-          { image: '23.2.0', version: '232' },
           { image: '24.1.0', version: '241' }
         ]
-        python-version: ['3.10'] #, '3.11', '3.12']
+        python-version: ['3.10', '3.11', '3.12']
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -132,7 +131,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python-version: ['3.10'] #, '3.11', '3.12']
+        python-version: ['3.10', '3.11', '3.12']
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -242,7 +241,7 @@ jobs:
   build-library:
     name: Build library
     runs-on: ubuntu-latest
-    needs: [gen-stubs, smoke-tests, doc-build]
+    needs: [doc-build]
     steps:
     - name: "Install Git and clone project"
       uses: actions/checkout@v4
