--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -35,7 +35,7 @@ jobs:
     name: Code style
     runs-on: ubuntu-latest
     steps:
-      - name: PyAnsys code style checks
+      - name: "PyAnsys code style checks"
         uses: ansys/actions/code-style@v4
         with:
           python-version: ${{ env.MAIN_PYTHON_VERSION }}
@@ -44,7 +44,7 @@ jobs:
     name: Documentation style check
     runs-on: ubuntu-latest
     steps:
-      - name: PyAnsys documentation style checks
+      - name: "PyAnsys documentation style checks"
         uses: ansys/actions/doc-style@v4
         with:
           vale-config: doc/.vale.ini
@@ -65,10 +65,10 @@ jobs:
         ]
         python-version: ['3.10', '3.11', '3.12']
     steps:
-      - name: Checkout repository
+      - name: "Install Git and clone project"
         uses: actions/checkout@v4
 
-      - name: Install dependencies
+      - name: "Install dependencies"
         env:
           AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.mechanical.version }}
           ANSYSCL${{ matrix.mechanical.version }}_DIR: /install/ansys_inc/v${{ matrix.mechanical.version }}/licensingclient
@@ -87,15 +87,11 @@ jobs:
           python --version
           pip --version
 
-            mkdir -p ${{ env.PACKAGE_PATH }}
-            touch ${{ env.PACKAGE_PATH }}/__init__.py
-          pwd
-          ls -l
           pip install -e .[doc]
           pip install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip setuptools
           pip install --upgrade pip flit pytz tzdata ansys-pythonnet
 
-      - name: Generate the mechanical stub files
+      - name: "Generate the Mechanical stub files"
         env:
           AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.mechanical.version }}
           ANSYSCL${{ matrix.mechanical.version }}_DIR: /install/ansys_inc/v${{ matrix.mechanical.version }}/licensingclient
@@ -103,7 +99,7 @@ jobs:
           python stub_generator/create_files.py > results.txt
         continue-on-error: True
 
-      - name: Check stubs were generated
+      - name: "Check stubs were generated"
         run: |
           cat results.txt
 
@@ -117,7 +113,7 @@ jobs:
             exit 1
           fi
 
-      - name: Upload v${{ matrix.mechanical.version }} stubs
+      - name: "Upload v${{ matrix.mechanical.version }} stubs"
         uses: actions/upload-artifact@v4
         with:
           name: v${{ matrix.mechanical.version }}-${{ matrix.python-version }}
@@ -133,23 +129,23 @@ jobs:
         os: [ubuntu-latest, windows-latest]
         python-version: ['3.10', '3.11', '3.12']
     steps:
-    - name: Checkout repository
+    - name: "Install Git and clone project"
       uses: actions/checkout@v4
 
-    - name: Download stubs
+    - name: "Download stubs"
       uses: ./.github/workflows/setup-stubs/
       with:
         folder-pattern: "*-${{ matrix.python-version }}"
         package-path: "${{ env.PACKAGE_PATH }}"
         python-version: ${{ matrix.python-version }}
 
-    - name: Retrieve Mechanical version
+    - name: "Retrieve Mechanical version"
       run: |
         pip install -e .
         echo "MECHANICAL_VERSION=$(python -c 'from ansys.mechanical.stubs import __version__; print(__version__)')" >> $GITHUB_ENV
         echo "Mechanical version is: $(python -c "from ansys.mechanical.stubs import __version__; print(__version__)")"
 
-    - name: Install package and create wheelhouse
+    - name: "Install package and create wheelhouse"
       run: |
         python -m pip install -e .
         python -m pip install importlib-metadata
@@ -176,53 +172,53 @@ jobs:
       matrix:
         python-version: ['3.10']
     steps:
-    - name: Checkout repository
+    - name: "Install Git and clone project"
       uses: actions/checkout@v4
 
-    - name: Download stubs
+    - name: "Download stubs"
       uses: ./.github/workflows/setup-stubs/
       with:
         folder-pattern: "v[0-9][0-9][0-9]-${{ matrix.python-version }}"
         package-path: "${{ env.PACKAGE_PATH }}"
         python-version: ${{ matrix.python-version }}
 
-    - name: Install project & doc dependencies
+    - name: "Install project & doc dependencies"
       run: |
         pip install -e .[doc]
 
-    - name: Generate html and markdown documentation
+    - name: "Generate html and markdown documentation"
       run: |
         make -C doc html
         sphinx-build -M markdown doc/source doc/_build
 
-    - name: Clean ID in first row
+    - name: "Clean ID in first row"
       run: |
         python scripts/01-clean-id.py
 
-    - name: Clean empty rows
+    - name: "Clean empty rows"
       run: |
         python scripts/02-clean-empty-row.py
 
-    - name: Create table of contents
+    - name: "Create table of contents"
       run: |
         python scripts/03-create-toc-from-html-mechanical.py
 
-    - name: Add header to tables
+    - name: "Add header to tables"
       run: |
         python scripts/04-add-header-to-tables.py
 
-    - name: Remove links in heading
+    - name: "Remove links in heading"
       run: |
         python scripts/05-remove-link-in-heading.py
 
-    - name: Upload to GitHub Artifacts
+    - name: "Upload to GitHub Artifacts"
       if: matrix.python-version == env.MAIN_PYTHON_VERSION
       uses: actions/upload-artifact@v4
       with:
         name: toc-file
         path: output/
 
-    - name: Upload markdown documentation
+    - name: "Upload markdown documentation"
       uses: actions/upload-artifact@v3
       if: matrix.python-version == env.MAIN_PYTHON_VERSION
       with:
@@ -230,7 +226,7 @@ jobs:
         path: doc/_build/markdown
         retention-days: 7
 
-    - name: Upload Sphinx HTML documentation
+    - name: "Upload Sphinx HTML documentation"
       uses: actions/upload-artifact@v3
       if: matrix.python-version == env.MAIN_PYTHON_VERSION
       with:
@@ -252,7 +248,7 @@ jobs:
         python-version: ${{ env.MAIN_PYTHON_VERSION }}
         use-cache: false
 
-    - name: Download stubs
+    - name: "Download stubs"
       uses: ./.github/workflows/setup-stubs/
       with:
         folder-pattern: "v[0-9][0-9][0-9]-${{ env.MAIN_PYTHON_VERSION }}"
@@ -365,7 +361,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [doc-deploy-stable]
     steps:
-      - name: Scrape the stable documentation to PyMeilisearch
+      - name: "Scrape the stable documentation to PyMeilisearch"
         run: |
           VERSION=$(python -c "from ${{ env.PACKAGE_NAMESPACE }} import __version__; print('.'.join(__version__.split('.')[:2]))")
           VERSION_MEILI=$(python -c "from ${{ env.PACKAGE_NAMESPACE }} import __version__; print('-'.join(__version__.split('.')[:2]))")
