--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -139,15 +139,26 @@ jobs:
         package-path: "${{ env.PACKAGE_PATH }}"
         python-version: ${{ matrix.python-version }}
 
-    - name: "Retrieve Mechanical version"
+    - name: "Install project"
       run: |
         pip install -e .
-        echo "MECHANICAL_VERSION=$(python -c 'from ansys.mechanical.stubs import __version__; print(__version__)')" >> $GITHUB_ENV
-        echo "Mechanical version is: $(python -c "from ansys.mechanical.stubs import __version__; print(__version__)")"
+
+    - name: "Retrieve Mechanical version"
+      shell: python
+      run: |
+        import os
+        from ${{ env.PACKAGE_NAMESPACE }} import __version__
+
+        # Get the GITHUB_ENV variable
+        github_env = os.getenv('GITHUB_ENV')
+
+        with open(github_env, "a") as f:
+            f.write(f"MECHANICAL_VERSION={__version__}")
+
+        print(f"Mechanical version is {__version__}")
 
     - name: "Install package and create wheelhouse"
       run: |
-        python -m pip install -e .
         python -m pip install importlib-metadata
         python -m pip wheel . -w wheelhouse
 
