--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,10 +1,15 @@
 documentation:
-- doc/source/**/*
+- changed-files:
+  - any-glob-to-any-file: ['doc/**/*', 'examples/**/*']
 
 maintenance:
-- .github/**/*
-- .flake8
-- pyproject.toml
+- changed-files:
+  - any-glob-to-any-file: ['.github/**/*', 'codecov.yml', '.flake8', '.coveragerc', '.codespellrc', '.pre-commit-config.yaml', 'tox.ini']
 
 dependencies:
-- requirements/*
+- changed-files:
+  - any-glob-to-any-file: ['pyproject.toml']
+
+ci/cd:
+- changed-files:
+  - any-glob-to-any-file: ['.github/**/*', 'docker/**/*']
