--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,19 +46,20 @@ dependencies = [
 
 [project.optional-dependencies]
 doc = [
-    "ansys-sphinx-theme==0.13.2",
+    "ansys-sphinx-theme[autoapi]==0.16.5",
+    "Sphinx==7.3.7",
+    "sphinx-copybutton==0.5.2",
+    "sphinx-notfound-page==1.0.2",
+    "sphinx-design==0.6.0",
+    "sphinx-jinja==2.0.2",
     "autodoc_pydantic==2.0.1",
     "jupyter_sphinx==0.5.3",
-    "nbsphinx==0.9.3",
     "numpydoc==1.6.0",
-    "Sphinx==7.2.6",
-    "sphinx-autoapi==3.0.0",
     "sphinx-autodoc-typehints==1.25.3",
     "sphinxcontrib-globalsubs==0.1.1",
     "sphinxcontrib-httpdomain==1.8.1",
     "sphinx-copybutton==0.5.2",
-    "sphinx_design==0.5.0",
-    "sphinx-jinja==2.0.2",
+    "sphinx_design==0.6.0",
     "sphinx-markdown-builder==0.6.6",
     "sphinxnotes-strike==1.2.1",
 ]
