try to move directories?

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -200,6 +200,7 @@ jobs:
     - name: "Generate html and markdown documentation"
       run: |
         # make -C doc html
+        cd pymechanical-stubs
         sphinx-build -M markdown doc/source doc/_build
 
     - name: "Clean ID in first row"
