--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -63,7 +63,7 @@ jobs:
         mechanical: [
           { image: '24.1.0', version: '241' }
         ]
-        python-version: ['3.10', '3.11', '3.12']
+        python-version: ['3.10'] #, '3.11', '3.12']
     steps:
       - name: "Install Git and clone project"
         uses: actions/checkout@v4
@@ -120,64 +120,64 @@ jobs:
           path: ${{ env.PACKAGE_PATH }}/v${{ matrix.mechanical.version }}
           retention-days: 7
 
-  smoke-tests:
-    name: Build wheelhouse
-    runs-on: ${{ matrix.os }}
-    needs: [gen-stubs]
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-        python-version: ['3.10', '3.11', '3.12']
-    steps:
-    - name: "Install Git and clone project"
-      uses: actions/checkout@v4
+  # smoke-tests:
+  #   name: Build wheelhouse
+  #   runs-on: ${{ matrix.os }}
+  #   needs: [gen-stubs]
+  #   strategy:
+  #     matrix:
+  #       os: [ubuntu-latest, windows-latest]
+  #       python-version: ['3.10', '3.11', '3.12']
+  #   steps:
+  #   - name: "Install Git and clone project"
+  #     uses: actions/checkout@v4
 
-    - name: "Download stubs"
-      uses: ./.github/workflows/setup-stubs/
-      with:
-        folder-pattern: "v[0-9][0-9][0-9]-${{ matrix.python-version }}"
-        package-path: "${{ env.PACKAGE_PATH }}"
-        python-version: ${{ matrix.python-version }}
+  #   - name: "Download stubs"
+  #     uses: ./.github/workflows/setup-stubs/
+  #     with:
+  #       folder-pattern: "v[0-9][0-9][0-9]-${{ matrix.python-version }}"
+  #       package-path: "${{ env.PACKAGE_PATH }}"
+  #       python-version: ${{ matrix.python-version }}
 
-    - name: "Install project"
-      run: |
-        pip install -e .
+  #   - name: "Install project"
+  #     run: |
+  #       pip install -e .
 
-    - name: "Retrieve Mechanical version"
-      shell: python
-      run: |
-        import os
-        from ${{ env.PACKAGE_NAMESPACE }} import __version__
+  #   - name: "Retrieve Mechanical version"
+  #     shell: python
+  #     run: |
+  #       import os
+  #       from ${{ env.PACKAGE_NAMESPACE }} import __version__
 
-        # Get the GITHUB_ENV variable
-        github_env = os.getenv('GITHUB_ENV')
+  #       # Get the GITHUB_ENV variable
+  #       github_env = os.getenv('GITHUB_ENV')
 
-        with open(github_env, "a") as f:
-            f.write(f"MECHANICAL_VERSION={__version__}")
+  #       with open(github_env, "a") as f:
+  #           f.write(f"MECHANICAL_VERSION={__version__}")
 
-        print(f"Mechanical version is {__version__}")
+  #       print(f"Mechanical version is {__version__}")
 
-    - name: "Install package and create wheelhouse"
-      run: |
-        python -m pip install importlib-metadata
-        python -m pip wheel . -w wheelhouse
+  #   - name: "Install package and create wheelhouse"
+  #     run: |
+  #       python -m pip install importlib-metadata
+  #       python -m pip wheel . -w wheelhouse
 
-    - name: "Compress the wheelhouse"
-      uses: vimtor/action-zip@v1.2
-      with:
-        files: wheelhouse
-        dest: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-${{ matrix.os }}-${{ matrix.python-version }}.zip
+  #   - name: "Compress the wheelhouse"
+  #     uses: vimtor/action-zip@v1.2
+  #     with:
+  #       files: wheelhouse
+  #       dest: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-${{ matrix.os }}-${{ matrix.python-version }}.zip
 
-    - name: "Upload the wheelhouse files"
-      uses: actions/upload-artifact@v4
-      with:
-        name: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-${{ matrix.os }}-${{ matrix.python-version }}
-        path: wheelhouse/*
-        retention-days: 7
+  #   - name: "Upload the wheelhouse files"
+  #     uses: actions/upload-artifact@v4
+  #     with:
+  #       name: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-${{ matrix.os }}-${{ matrix.python-version }}
+  #       path: wheelhouse/*
+  #       retention-days: 7
 
   doc-build:
     name: Make html and markdown documentation
-    needs: [smoke-tests]
+    needs: [gen-stubs]
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -200,8 +200,7 @@ jobs:
     - name: "Generate html and markdown documentation"
       run: |
         # make -C doc html
-        cd pymechanical-stubs
-        sphinx-build -M markdown doc/source doc/_build
+        sphinx-build -M markdown pymechanical-stubs/doc/source pymechanical-stubs/doc/_build
 
     - name: "Clean ID in first row"
       run: |
