--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -61,7 +61,8 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         mechanical: [
-          { image: '24.1.0', version: '241' }
+          { image: '24.1.0', version: '241' },
+          { image: '24.2.0', version: '242' },
         ]
         python-version: ['3.10', '3.11', '3.12']
     steps:
