--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,26 +1,17 @@
 repos:
 
-- repo: https://github.com/psf/black
-  rev: 23.7.0
+- repo: https://github.com/charliermarsh/ruff-pre-commit
+  rev: v0.5.5
   hooks:
-  - id: black
+    - id: ruff
+      args: [ --fix ]
+    - id: ruff-format
 
 - repo: https://github.com/adamchainz/blacken-docs
   rev: 1.16.0
   hooks:
   - id: blacken-docs
     additional_dependencies: [black==23.7.0]
-
-- repo: https://github.com/pycqa/isort
-  rev: 5.12.0
-  hooks:
-  - id: isort
-    args: ["--profile", "black"]
-
-# - repo: https://github.com/PyCQA/flake8
-#   rev: 6.1.0
-#   hooks:
-#   - id: flake8
 
 - repo: https://github.com/codespell-project/codespell
   rev: v2.2.5
