some ruff fixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,8 +69,8 @@ select = [
     "PTH",  # flake8-use-pathlib, https://beta.ruff.rs/docs/rules/#flake8-use-pathlib-pth
     "TD",   # flake8-todos, https://docs.astral.sh/ruff/rules/#flake8-todos-td
 ]
-exclude = [
-    "E501",  # Line too long. Ignoring this so "ruff.formatter" manages line length.
+ignore = [
+    "E501" # Line too long. Ignoring this so "ruff.formatter" manages line length.
 ]
 
 [tool.ruff.lint.pydocstyle]
