--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -39,7 +39,7 @@ jobs:
       uses: actions/labeler@v5
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        sync-labels: false
+        sync-labels: true
 
     # Label based on branch name
     - uses: actions-ecosystem/action-add-labels@v1
