--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -300,20 +300,11 @@ jobs:
     needs: [doc-build]
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
     steps:
-
-      - name: "Release to the private PyPI repository"
-        uses: ansys/actions/release-pypi-private@v7
+      - name: "Release to the public PyPI repository"
+        uses: ansys/actions/release-pypi-public@v7
         with:
           library-name: ${{ env.PACKAGE_NAME }}
-          twine-username: "__token__"
-          twine-token: ${{ secrets.PYANSYS_PYPI_PRIVATE_PAT }}
-
-     #- name: "Release to the public PyPI repository"
-     #  uses: ansys/actions/release-pypi-public@v6
-     #  with:
-     #    library-name: ${{ env.PACKAGE_NAME }}
-     #    twine-username: "__token__"
-     #    twine-token: ${{ secrets.PYPI_TOKEN }}
+          use-trusted-publisher: true
 
       - name: "Release to GitHub"
         uses: ansys/actions/release-github@v7
