--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,11 +24,12 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
 ]
 
-dependencies = [
-    "ansys-pythonnet==3.1.0rc3"
-]
+dependencies = []
 
 [project.optional-dependencies]
+build = [
+    "ansys-pythonnet==3.1.0rc3"
+]
 doc = [
     "ansys-sphinx-theme[autoapi]==0.16.5",
     "Sphinx==7.3.7",
