--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -30,6 +30,17 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  update-changelog:
+    name: "Update CHANGELOG for new tag"
+    if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+    steps:
+      - uses: ansys/actions/doc-deploy-changelog@v7
+        with:
+          token: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
 
   style:
     name: Code style
@@ -297,7 +308,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: [doc-build]
+    needs: [doc-build, update-changelog]
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
     steps:
       - name: "Release to the public PyPI repository"
