--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -308,7 +308,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: [doc-build, update-changelog]
+    needs: [build-library, update-changelog]
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
     steps:
       - name: "Release to the public PyPI repository"
