--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -308,6 +308,10 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: [build-library, update-changelog]
+    environment: release
+    permissions:
+      id-token: write
+      contents: write
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
     steps:
       - name: "Release to the public PyPI repository"
