--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -206,6 +206,7 @@ jobs:
 
     - name: "Install project & doc dependencies"
       run: |
+        apt install -y texlive-latex-extra latexmk
         python -m pip install -e .[doc]
 
     - name: "Generate html and markdown documentation"
