move stub generator

--- a/.github/workflows/setup-stubs/action.yml
+++ b/.github/workflows/setup-stubs/action.yml
@@ -75,6 +75,8 @@ runs:
         __version__ = importlib_metadata.version("ansys-mechanical-stubs")
         """Patch version for the ansys-mechanical-stubs package."""\n\n''')
 
+        f.write("from .stub_generator import *")
+
             for folder in subfolders:
                 f.write(f"from .{folder} import *\n")
                 f.write('"""Mechanical installation version."""\n')
