fix: Change C# types to Python (#75)
Co-authored-by: pyansys-ci-bot <92810346+pyansys-ci-bot@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,10 @@ doc = [
     "sphinx-markdown-builder==0.6.6",
     "sphinxnotes-strike==1.2.1",
 ]
+tests = [
+    "pytest==8.3.3",
+    "pytest-cov==5.0.0",
+]
 
 [project.urls]
 Source = "https://github.com/ansys/mechanical-stubs/"
@@ -57,6 +61,9 @@ Documentation = "https://scripting.mechanical.docs.pyansys.com"
 
 [tool.flit.module]
 name = "ansys.mechanical.stubs"
+
+[tool.flit.sdist]
+exclude = ["src/ansys/mechanical/stubs/stub_generator/*"]
 
 [tool.ruff]
 line-length = 100
