--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -109,7 +109,7 @@ jobs:
           AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.mechanical.version }}
           ANSYSCL${{ matrix.mechanical.version }}_DIR: /install/ansys_inc/v${{ matrix.mechanical.version }}/licensingclient
         run: |
-          python stub_generator/create_files.py > results.txt
+          python src/ansys/mechanical/stubs/stub_generator/create_files.py > results.txt
         continue-on-error: True
 
       - name: "Check stubs were generated"
@@ -301,7 +301,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: documentation-pdf
-        path: doc/_build/latex/*.pdf
+        path: doc/_build/latex/doc.pdf
         retention-days: 7
 
   build-library:
